pod-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-hotedit
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sleep", "3600"]
      resources:
        requests:
          memory: "32Mi"
          cpu: "10m"
        limits:
          memory: "32Mi"
          cpu: "10m"
